<resources>
    <string name="app_name">GeoPhone</string>
    <string name="navigation_drawer_open">Ouvrir la naviguation tiroir</string>
    <string name="navigation_drawer_close">Fermer la naviguation tiroir</string>
    <string name="action_settings">Paramètres</string>
    <string name="hello_word">Bonjour</string>
    <string name="button_associer">Associer</string>
    <string name="button_rechercher">Rechercher</string>
    <string name="ce_num">Ce numéro</string>
    <string name="button_rechercher_par_mdp">Rechercher par mot de passe</string>
    <string name="change_language">Changer de langue ?</string>
    <string-array name="languages">
        <item>Sélectionner une langue</item>
        <item>Français</item>
        <item>Anglais</item>
    </string-array>
    <string name="title_activity_recherche">RechercheActivity</string>
    <string name="auteur">Alexis Pambourg et Nicolas Bouvet</string>
    <string name="recent">Récent</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="ancien_mot_de_passe">Ancien mot de passe</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="title_activity_parametre">ParametreActivity</string>
    <string name="recherche">Recherche</string>
    <string name="recherche_sans_contact">Recherche sans contact</string>
    <string name="valider">Valider</string>
    <string name="mot_de_passe_oublié">Mot de passe oublié</string>
    <string name="question_secrete">Quel est le nom de jeune fille de votre mère ?</string>
    <string name="question_secrete_lab">Question de récupération du mot de passe</string>
    <string name="configure_mot_de_passe">Configurer mot de passe</string>
    <string name="votre_mdp_est">Votre mot de passe est:</string>
    <string name="mauvais_mot_de_passe">Mauvais mot de passe</string>
    <string name="mot_de_passe_changé">Mot de passe changé</string>
    <string name="title_activity_recent">RecentActivity</string>
    <string name="title_activity_password">PasswordActivity</string>
    <string name="home">Accueil</string>
    <string name="title_activity_map">Carte</string>
    <string name="message_recherche_confirm">Êtes-vous sur de vouloir le rechercher</string>
    <string name="change_lang">Changement de langue pour le Français</string>
    <string name="title_activity_recherche_rapprocher">RechercheRapprocherActivity</string>
    <string name="carte">Carte</string>
    <string name="name_of_wifi">Nom du wifi :</string>
    <string name="power_wifi">Puissance du wifi</string>
    <string name="found">Trouvé</string>
    <string name="sound_and_vibration">Faire sonner et vibrer ?</string>
    <string name="recherche_rapproche">Recherche Rapproché</string>
    <string name="go_to_recherche_raproche">Passer en navigation rapproché</string>
    <string name="go_nav">Lancer la navigation</string>
    <string name="position_of">Position de</string>
    <string name="bad_answer">Mauvaise réponse</string>
    <string name="exit">Sortie</string>
    <string name="sure_exit">Etes-vous de vouloir quitter ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="message_envoye">Demande envoyée, patientez s\'il vous plait...</string>
    <string name="erreur_wifi">Pas connecté sur un Wifi</string>
    <string name="title_activity_ring">RingActivity</string>
</resources>
