<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_initialisation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bouveti.geophone.InitialisationActivity"
    tools:showIn="@layout/app_bar_initialisation">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/nom_app"
        android:text="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="100dp"
        android:textSize="20dp"
        android:id="@+id/conf_mot_de_passe"
        android:text="@string/configure_mot_de_passe" />

    <EditText
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="70dp"

        android:inputType="number"
        android:ems="10"
        android:id="@+id/enterPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="100dp"
        android:textSize="20dp"
        android:id="@+id/lab_question_secrete"
        android:text="@string/question_secrete_lab" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="100dp"
        android:textSize="10dp"
        android:id="@+id/question_secrete"
        android:text="@string/question_secrete" />

    <EditText
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="70dp"

        android:inputType="text"
        android:ems="10"
        android:id="@+id/enter_secrete_answer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="120dp"
        android:text="@string/valider"
        android:onClick="submit"/>

</RelativeLayout>