<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bouveti.geophone.PasswordActivity"
    tools:showIn="@layout/app_bar_password">>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="100dp"
    android:textSize="30dp"
    android:id="@+id/title_mot_de_passe"
    android:text="@string/mot_de_passe" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="100dp"
        android:textSize="20dp"
        android:id="@+id/lab_mot_de_passe"
        android:text="@string/ancien_mot_de_passe" />

    <EditText
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="70dp"

        android:inputType="numberPassword"
        android:ems="10"
        android:id="@+id/enterPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="100dp"
        android:textSize="20dp"
        android:id="@+id/lab_new_mot_de_passe"
        android:text="@string/nouveau_mot_de_passe" />

    <EditText
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="70dp"

        android:inputType="numberPassword"
        android:ems="10"
        android:id="@+id/enterNewPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="120dp"
        android:text="@string/valider"
        android:id="@+id/button_validate_password"
        android:onClick="changePassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="80dp"
        android:text="@string/mot_de_passe_oublié"
        android:id="@+id/button_forgotten_password"
        android:onClick="toForgotten"/>

</RelativeLayout>
