<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bouveti.geophone.ForgottenActivity"
    tools:showIn="@layout/app_bar_forgotten">>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:textSize="30dp"
        android:id="@+id/title_mot_de_passe_oublié"
        android:text="@string/mot_de_passe_oublié" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:id="@+id/lab_question_secrete"
        android:text="@string/question_secrete" />


    <EditText
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="70dp"

        android:inputType="text"
        android:ems="10"
        android:id="@+id/enter_secrete_answer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="120dp"
        android:text="@string/valider"
        android:id="@+id/button_validate_secrete_answer"
        android:onClick="showPassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:text="@string/votre_mdp_est"
        android:id="@+id/reveal_password" />

</RelativeLayout>